--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -17,7 +17,8 @@
     "material-react-table": "^3.2.0",
     "next": "15.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
