--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^6.4.6",
+    "@mui/x-charts": "^7.27.1",
+    "date-fns": "^4.1.0",
     "material-react-table": "^3.2.0",
     "next": "15.2.0",
     "react": "^19.0.0",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/date-fns": "^2.5.3",
     "@types/node": "22.13.5",
     "eslint": "^9",
     "eslint-config-next": "15.2.0"
