--- a/frontend-customers/package.json
+++ b/frontend-customers/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
+    "aos": "^2.3.4",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
     "react": "^19.0.0",
