--- a/frontend-customers/package.json
+++ b/frontend-customers/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
     "aos": "^2.3.4",
+    "axios": "^1.8.4",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
     "react": "^19.0.0",
