--- a/frontend-customers/package.json
+++ b/frontend-customers/package.json
@@ -22,7 +22,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-otp-input": "^3.1.1"
+    "react-otp-input": "^3.1.1",
+    "react-share": "^5.2.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
