--- a/backend-customers/package.json
+++ b/backend-customers/package.json
@@ -8,6 +8,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "stripe": "^18.1.0"
   }
 }
