--- a/frontend-customers/package.json
+++ b/frontend-customers/package.json
@@ -15,6 +15,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.0",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
     "lucide-react": "^0.484.0",
