--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -15,7 +15,11 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^6.4.6",
     "@mui/x-charts": "^7.27.1",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.511.0",
     "material-react-table": "^3.2.0",
     "next": "15.2.0",
     "react": "^19.0.0",
