--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "fs": "^0.0.1-security",
     "google-auth-library": "^9.15.1",
     "googleapis": "^144.0.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
